# MLops-Election

./: .gitignore  COURSE_OVERVIEW.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  dvc.yaml  requirements.txt  setup.py
.github/workflows/: ci-cd.yaml
airflow/dags/: batch_scoring.py  retrain_on_drift.py  train_pipeline.py
assets/diagrams/: README.md
assets/images/: README.md
course/section-01-intro/: README.md  lecture-1-1.md  lecture-1-2.md  lecture-1-3.md  lecture-1-4.md  (+4 more)
docker/: Dockerfile.api
docs/: REVISION_SUMMARY.md  TESTING.md  UDEMY_IMPLEMENTATION_GUIDE.md
kubernetes/: deployment.yaml  hpa.yaml  rbac.yaml  service.yaml
models/: .gitkeep
notebooks/: EDA.ipynb
project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project/config/: config.yaml
project/notebooks/: exploration_notebook_template.ipynb
project/src/churn_mlops/: __init__.py
project/src/churn_mlops/data/: __init__.py
project/src/churn_mlops/features/: __init__.py
project/src/churn_mlops/models/: __init__.py  inference.py  train.py
project/src/churn_mlops/pipelines/: __init__.py  training_pipeline.py
project/src/churn_mlops/serving/: __init__.py  app.py
project/tests/: __init__.py  test_api.py  test_data.py  test_models.py
prometheus/: prometheus.yml
quizzes/: section-01-quiz.md  section-02-quiz.md  section-03-quiz.md  section-04-quiz.md  section-05-quiz.md  section-06-quiz.md  section-07-quiz.md  section-08-quiz.md  section-09-quiz.md  section-10-quiz.md  section-11-quiz.md  section-12-quiz.md  section-13-quiz.md  section-14-quiz.md  section-15-quiz.md
reports/: drift_report.json  evaluation_report.json
slides/: README.md
src/: __init__.py
tests/: conftest.py  test_api.py  test_data_generation.py  test_features.py  test_preprocessing.py
(+126 files in other folders)
